# shader-works

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  Software_Rasterizer.ino  build  build.py  build_all.sh  find.txt  helpers.cpp  helpers.h  main.cpp  platformio.ini  quick_build.sh  software-rasterizer.ino
.github/workflows/: ci.yml  linux-build.yml  macos-build.yml  quick-build.yml  windows-build.yml
demos/Microcraft/: .gitignore  .gitmodules  CMakeLists.txt  build
demos/Microcraft/src/: input.cpp  renderer.h
demos/common/: CMakeLists.txt  chunk_map.c  chunk_map.h  config.c  config.h  noise.c  noise.h  state.c  state.h  util.c  util.h
demos/microcraft/: .gitignore  CMakeLists.txt  README.md  arm-none-eabi-toolchain.cmake
demos/microcraft/src/: CMakeLists.txt  renderer.cpp  resources.inl  scene.cpp  scene.h  scene.hpp
demos/microcraft/tools/: bake
demos/planets/: CMakeLists.txt  README.md
demos/planets/src/: main.c
demos/tundra/: CMakeLists.txt  README.md  config.json
demos/tundra/res/: config.json
demos/tundra/src/: const.h  dog.c  dog.h  main.c  proc_gen.c  scene.c  scene.h  shaders.c
demos/tundra/src/scenes/: part_1.c  scenes.h
demos/tundra/src/stages/: part_1.c  stages.c  stages.h
demos/tundra/src/util/: state.h
demos/zombies/: CMakeLists.txt  copy_resources.sh
demos/zombies/src/: controller.c  controller.h  main.c  shading.c  state_management.c  state_management.h  world.c  world.h
examples/01_spinning_cube/: CMakeLists.txt  main.c
examples/02_textured_scene/: CMakeLists.txt  def.h  main.c
examples/03_fps_controller/: CMakeLists.txt  main.c
examples/04_benchmark/: CMakeLists.txt  README.md  main.c
examples/basic_demo/: CMakeLists.txt  def.h  main.c  resources.inl
examples/fps_controller/: CMakeLists.txt
examples/full_test/: CMakeLists.txt  def.h  main.c  shaders.c  shaders.h
flash_format/: .gitignore  build.py  ffconf.h  flash_format.ino  res_copy.py
include/cpu-render/: maths.h  primitives.h  renderer.h  shaders.h
include/shader-works/: primitives.h  renderer.h  shaders.h
lib/include/shader-works/: maths.h  primitives.h  renderer.h  shaders.h
lib/src/: maths.c  primitives.c  renderer.c  shaders.c
linker/: flash_with_bootloader.ld
res/: ._atlas.bmp.pyxel  atlas.bmp.pyxel  test.bmp.pyxel  test.txt
src/: const.h  def.h  device.cpp  device.h  display.cpp  display.h  hal_gpio.h  handlers.c  input.cpp  main.c  main.cpp  maths.c  maths.h  primitives.c  renderer.c  renderer.cpp  renderer.h  resource_manager.cpp  resource_manager.h  resources.inl  scene.cpp  scene.h  shaders.c  startup.s  startup_samd51.c
src/core/: start.c
src/test/: expected_values.h  test.cpp  test.h
src/util/: Transform.cpp  Transform.h  helpers.cpp  helpers.h  maths.cpp  maths.h  model.cpp  model.h  vec.cpp  vec.h
tools/: bake
tools/flash_format/: .gitignore  build  res_copy.py
tools/flash_format/src/: main.cpp
tools/flash_format/src/util/: diskio.h
utils/: rgb_convert.py
